<resources>
    <string name="app_name">task2</string>
    <string name="name_form_strings">お名前</string>
    <string name="mail_address_form_text">メールアドレス</string>
    <string name="memo_form_text">メモ</string>
    <string name="send_button_text">送信</string>
    <string name="birthday_form_text">生年月日</string>
    <string name="address_form_text">住所</string>
    <string name="birthday_year_text">年</string>
    <string name="birthday_month_text">月</string>
    <string name="birthday_day_text">日</string>
</resources>